--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ nav ul li a:hover{
 }
 
 /**************************************************************************************/
-/*Formulario | Contacto - Estilo*/
+/*Formulario de Pedidos - Estilo*/
 
 /* Estilos para los campos de entrada */
 input[type="text"],
@@ -224,7 +224,72 @@ label {
   margin-right: 20px; /* Espacio derecho */
 }
 
+.enviarPedido {
+  border: none;
+  background-color: #b18ab2;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: box-shadow 0.3s;
+  border-radius: 4px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.enviarPedido:hover {
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+}
+
+.enviarPedido input[type="submit"] {
+  margin-top: 20px; /* Espacio debajo del botón */
+}
+
 /********************************************************************************/
+/* Contacto */
+.contacto {
+  display: flex;
+  flex-direction: column;
+}
+
+.contacto a {
+  text-decoration: none;
+  color: #333; /* Color del texto */
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.contacto a i {
+  margin-right: 10px;
+}
+
+/* Estilo específico para el icono de WhatsApp */
+.contacto a[href*="wa.me"] i {
+  color: #25d366; /* Color verde de WhatsApp */
+}
+
+/* Texto */
+.texto {
+  padding: 20px;
+}
+
+.texto h1 {
+  color: #a963bc;
+}
+
+.texto p {
+  line-height: 1.6;
+}
+
+/* Pie de página */
+.credito {
+  text-align: center;
+  background-color: #d8bfd8;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
+}
 
 /*******************************************************************************/
 /*Reponsive - adaptacion de formato de dispositivos*/
@@ -256,6 +321,8 @@ label {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
 }
+
+
 
 @media (max-width: 480px){
   .ProductosContenedores{
